--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=userAuthentication
 server.port=8082
 
 #database connectivity
-spring.datasource.url=jdbc:mysql://localhost:3306/employeeonboarding
+spring.datasource.url=jdbc:mysql://localhost:3306/companytask
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
